# tapirxl

./: .gitignore  CLAUDE.md  LICENSE  README.md  justfile  models.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
configs/: upload-vector.dryrun.toml  upload-vector.pcap.toml  upload-vector.stdin.toml  upload-vector.tests.toml  upload-vector.toml  upload-vector.vrl  upload.env.example
docs/: ARCHITECTURE.md
packaging/docker/: README.md  compose.tapirxl.yaml
packaging/docker/demo/: Dockerfile  entrypoint.sh
packaging/docker/parser/: Dockerfile
packaging/docker/vector/: Dockerfile
schemas/: inventory_record.schema.json
src/tapirxl/: __main__.py  cli.py
src/tapirxl/agent/: cli.py  config.py  fusion.py  inventory.py  normalize.py  ports.py
src/tapirxl/agent/adapters/: jsonl_sink.py  markdown_sink.py  ollama_lm.py  stdin_source.py
src/tapirxl/agent/compile/: compile_fusion.py  compile_normalize.py
src/tapirxl/agent/modules/: fuse_module.py  norm_module.py
src/tapirxl/agent/signatures/: fuse.py  normalize.py
src/tapirxl/core/: enums.py  inventory_record.py  ip.py  mac.py  oui.py  phi.py  ws_tables.py
src/tapirxl/fixtures/: builder.py  cli.py  ct_to_pacs_scenario.toml  generator.py  loader.py  manifest.py  signal_manifest.toml  topology.py
src/tapirxl/fixtures/protocols/: __init__.py  _helpers.py  arp.py  dhcp.py  dicom.py  (+5 more)
src/tapirxl/parser/: _helpers.py  cli.py  deterministic.py  emit.py  envelope_builder.py  live.py  live_cli.py  live_emitter.py  pipeline.py  ports.py  serialize.py  tables.py  triage.py
src/tapirxl/schemas/: envelope.py  fusion.py  inventory.py
static/: dicom_impl_uid_arcs.json  fingerbank_dhcp_55.json  hl7_sending_apps.json  snmp_sysobjectid_arcs.json
templates/: report_template.md.jinja
tests/compat/: test_deps.py  test_inventory_schema_parity.py
tests/fixtures/: ct_to_pacs_scenario.pcap  golden_report.md  synthetic_philips_demo.pcap
tests/integration/: blueflow_stub.py  test_envelope_smoke.py  test_golden_report.py  test_phase1_live_smoke.py  test_phase1_smoke.py  test_smoke.py  test_stdout_purity.py
tests/regression/: golden_synthetic_philips_assets.jsonl  golden_synthetic_philips_envelope.jsonl  golden_synthetic_philips_inventory.jsonl  test_compose_fragment.py  test_demo_image.py  test_golden.py  test_live_final_drain.py  test_vector_pipeline.py  test_vector_unit_tests.py  test_vector_version_pinned.py
tests/unit/: test_core.py  test_ct_to_pacs_scenario.py  test_dicom_extractor.py  test_fixtures_cli.py  test_floor_triggers.py  test_generator_dispatch.py  test_inventory_record.py  test_live_emitter.py  test_migrations.py  test_serialize.py  test_signal_manifest.py  test_triage.py
(+22 files in other folders)
