[project]
name = "tapirxl"
version = "0.3.0"
requires-python = ">=3.14"
dependencies = [
    "pyshark",
    "dspy-ai>=2.4",
    "ollama",
    "jinja2",
    "jinja-markdown2",
    "pydantic>=2",
    "typer",
]

[project.scripts]
mdt          = "tapirxl.cli:app"
mdt-parse    = "tapirxl.parser.cli:main"
mdt-agent    = "tapirxl.agent.cli:main"
mdt-fixtures = "tapirxl.fixtures.cli:main"

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov", "mypy", "scapy", "pydicom", "pynetdicom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapirxl"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
