[project]
name = "tapirxl"
version = "0.3.0"
requires-python = ">=3.14"
dependencies = [
    "pyshark",
    "pydantic>=2",
    "typer",
]

[project.scripts]
tapirxl          = "tapirxl.cli:app"
tapirxl-parse    = "tapirxl.parser.cli:main"
tapirxl-fixtures = "tapirxl.fixtures.cli:main"

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov", "mypy", "scapy", "pydicom", "pynetdicom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapirxl"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
