[project]
name = "tapirxl"
version = "0.3.0"
requires-python = ">=3.14"
dependencies = [
    # pyshark is strictly pinned because the golden regression test
    # (tests/regression/) asserts byte-identical output. pyshark is on
    # the path to replacement/supplement by bespoke DPI tooling, so
    # floating-version compatibility is not a goal.
    "pyshark==0.6",
    "pydantic>=2",
    "typer",
]

[project.scripts]
tapirxl          = "tapirxl.cli:app"
tapirxl-parse    = "tapirxl.parser.cli:main"
tapirxl-fixtures = "tapirxl.fixtures.cli:main"

[dependency-groups]
dev = ["ruff", "pytest", "pytest-cov", "mypy", "scapy", "pydicom", "pynetdicom"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tapirxl"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require docker and --network=host (Linux only)",
]
